addded a contact page and fixed some spacing issues to standardize the website

--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ h1 {
 	border-color: #e6e6e6;
 }
 
+h2 {
+	color:  #99ccff;
+	font-style: italic;
+}
+
 a:link{
 	text-decoration: none;
 	color: #e6e6e6;
@@ -31,6 +36,11 @@ a:hover{
 
 .left {
 	padding-right: 3%
+}
+
+.middle {
+	padding-left: 3%;
+	padding-right: 3%;
 }
 
 .box {
